--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,19 @@ coreschema==0.0.4
 django==4.1.2
     # via
     #   -r requirements.in
+    #   django-filter
     #   djangorestframework
+    #   djangorestframework-simplejwt
     #   drf-yasg
+django-filter==22.1
+    # via -r requirements.in
 djangorestframework==3.14.0
     # via
     #   -r requirements.in
+    #   djangorestframework-simplejwt
     #   drf-yasg
+djangorestframework-simplejwt==5.2.2
+    # via -r requirements.in
 drf-yasg==1.21.4
     # via -r requirements.in
 idna==3.4
@@ -53,6 +60,8 @@ py==1.11.0
     # via pytest
 pygments==2.13.0
     # via -r requirements.in
+pyjwt==1.7.1
+    # via djangorestframework-simplejwt
 pyparsing==3.0.9
     # via packaging
 pytest==7.1.3
@@ -60,6 +69,8 @@ pytest==7.1.3
 pytest-django==4.5.2
     # via -r requirements.in
 python-decouple==3.6
+    # via -r requirements.in
+python-environ==0.4.54
     # via -r requirements.in
 pytz==2022.4
     # via
