--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,38 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+amqp==5.1.1
+    # via kombu
 asgiref==3.5.2
     # via django
 attrs==22.1.0
     # via pytest
+billiard==3.6.4.0
+    # via celery
+boto3==1.24.96
+    # via -r requirements.in
+botocore==1.27.96
+    # via
+    #   boto3
+    #   s3transfer
+celery==5.2.7
+    # via -r requirements.in
 certifi==2022.9.24
     # via requests
 charset-normalizer==2.1.1
     # via requests
+click==8.1.3
+    # via
+    #   celery
+    #   click-didyoumean
+    #   click-plugins
+    #   click-repl
+click-didyoumean==0.3.0
+    # via celery
+click-plugins==1.1.1
+    # via celery
+click-repl==0.2.0
+    # via celery
 coreapi==2.3.3
     # via drf-yasg
 coreschema==0.0.4
@@ -46,6 +70,12 @@ itypes==1.2.0
     # via coreapi
 jinja2==3.1.2
     # via coreschema
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
+kombu==5.2.4
+    # via celery
 markdown==3.4.1
     # via -r requirements.in
 markupsafe==2.1.1
@@ -56,6 +86,8 @@ packaging==21.3
     #   pytest
 pluggy==1.0.0
     # via pytest
+prompt-toolkit==3.0.31
+    # via click-repl
 py==1.11.0
     # via pytest
 pygments==2.13.0
@@ -68,12 +100,15 @@ pytest==7.1.3
     # via pytest-django
 pytest-django==4.5.2
     # via -r requirements.in
+python-dateutil==2.8.2
+    # via botocore
 python-decouple==3.6
     # via -r requirements.in
 python-environ==0.4.54
     # via -r requirements.in
 pytz==2022.4
     # via
+    #   celery
     #   djangorestframework
     #   drf-yasg
 pyyaml==6.0
@@ -84,6 +119,12 @@ ruamel-yaml==0.17.21
     # via drf-yasg
 ruamel-yaml-clib==0.2.6
     # via ruamel-yaml
+s3transfer==0.6.0
+    # via boto3
+six==1.16.0
+    # via
+    #   click-repl
+    #   python-dateutil
 sqlparse==0.4.3
     # via django
 tomli==2.0.1
@@ -94,4 +135,13 @@ uritemplate==4.1.1
     #   coreapi
     #   drf-yasg
 urllib3==1.26.12
-    # via requests
+    # via
+    #   botocore
+    #   requests
+vine==5.0.0
+    # via
+    #   amqp
+    #   celery
+    #   kombu
+wcwidth==0.2.5
+    # via prompt-toolkit
