--- a/requirements.txt
+++ b/requirements.txt
@@ -60,10 +60,18 @@ djangorestframework-simplejwt==5.2.2
     # via -r requirements.in
 drf-yasg==1.21.4
     # via -r requirements.in
+factory-boy==3.2.1
+    # via pytest-factoryboy
+faker==15.1.1
+    # via
+    #   -r requirements.in
+    #   factory-boy
 idna==3.4
     # via requests
 inflection==0.5.1
-    # via drf-yasg
+    # via
+    #   drf-yasg
+    #   pytest-factoryboy
 iniconfig==1.1.1
     # via pytest
 itypes==1.2.0
@@ -97,11 +105,17 @@ pyjwt==1.7.1
 pyparsing==3.0.9
     # via packaging
 pytest==7.1.3
-    # via pytest-django
+    # via
+    #   pytest-django
+    #   pytest-factoryboy
 pytest-django==4.5.2
     # via -r requirements.in
+pytest-factoryboy==2.5.0
+    # via -r requirements.in
 python-dateutil==2.8.2
-    # via botocore
+    # via
+    #   botocore
+    #   faker
 python-decouple==3.6
     # via -r requirements.in
 python-environ==0.4.54
@@ -129,6 +143,8 @@ sqlparse==0.4.3
     # via django
 tomli==2.0.1
     # via pytest
+typing-extensions==4.4.0
+    # via pytest-factoryboy
 uritemplate==4.1.1
     # via
     #   -r requirements.in
