--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ amqp==5.1.1
 asgiref==3.5.2
     # via django
 attrs==22.1.0
-    # via pytest
+    # via
+    #   jsonschema
+    #   pytest
 billiard==3.6.4.0
     # via celery
 boto3==1.24.96
@@ -20,10 +22,6 @@ botocore==1.27.96
     #   s3transfer
 celery==5.2.7
     # via -r requirements.in
-certifi==2022.9.24
-    # via requests
-charset-normalizer==2.1.1
-    # via requests
 click==8.1.3
     # via
     #   celery
@@ -36,29 +34,23 @@ click-plugins==1.1.1
     # via celery
 click-repl==0.2.0
     # via celery
-coreapi==2.3.3
-    # via drf-yasg
-coreschema==0.0.4
-    # via
-    #   coreapi
-    #   drf-yasg
 django==4.1.2
     # via
     #   -r requirements.in
     #   django-filter
     #   djangorestframework
     #   djangorestframework-simplejwt
-    #   drf-yasg
+    #   drf-spectacular
 django-filter==22.1
     # via -r requirements.in
 djangorestframework==3.14.0
     # via
     #   -r requirements.in
     #   djangorestframework-simplejwt
-    #   drf-yasg
+    #   drf-spectacular
 djangorestframework-simplejwt==5.2.2
     # via -r requirements.in
-drf-yasg==1.21.4
+drf-spectacular==0.24.2
     # via -r requirements.in
 factory-boy==3.2.1
     # via pytest-factoryboy
@@ -66,32 +58,24 @@ faker==15.1.1
     # via
     #   -r requirements.in
     #   factory-boy
-idna==3.4
-    # via requests
 inflection==0.5.1
     # via
-    #   drf-yasg
+    #   drf-spectacular
     #   pytest-factoryboy
 iniconfig==1.1.1
     # via pytest
-itypes==1.2.0
-    # via coreapi
-jinja2==3.1.2
-    # via coreschema
 jmespath==1.0.1
     # via
     #   boto3
     #   botocore
+jsonschema==4.16.0
+    # via drf-spectacular
 kombu==5.2.4
     # via celery
 markdown==3.4.1
     # via -r requirements.in
-markupsafe==2.1.1
-    # via jinja2
 packaging==21.3
-    # via
-    #   drf-yasg
-    #   pytest
+    # via pytest
 pluggy==1.0.0
     # via pytest
 prompt-toolkit==3.0.31
@@ -104,6 +88,8 @@ pyjwt==1.7.1
     # via djangorestframework-simplejwt
 pyparsing==3.0.9
     # via packaging
+pyrsistent==0.18.1
+    # via jsonschema
 pytest==7.1.3
     # via
     #   pytest-django
@@ -124,15 +110,10 @@ pytz==2022.4
     # via
     #   celery
     #   djangorestframework
-    #   drf-yasg
 pyyaml==6.0
-    # via -r requirements.in
-requests==2.28.1
-    # via coreapi
-ruamel-yaml==0.17.21
-    # via drf-yasg
-ruamel-yaml-clib==0.2.6
-    # via ruamel-yaml
+    # via
+    #   -r requirements.in
+    #   drf-spectacular
 s3transfer==0.6.0
     # via boto3
 six==1.16.0
@@ -148,12 +129,9 @@ typing-extensions==4.4.0
 uritemplate==4.1.1
     # via
     #   -r requirements.in
-    #   coreapi
-    #   drf-yasg
+    #   drf-spectacular
 urllib3==1.26.12
-    # via
-    #   botocore
-    #   requests
+    # via botocore
 vine==5.0.0
     # via
     #   amqp
