--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ django==4.1.2
     #   djangorestframework
     #   djangorestframework-simplejwt
     #   drf-spectacular
+    #   drf-spectacular-sidecar
 django-filter==22.1
     # via -r requirements.in
 djangorestframework==3.14.0
@@ -51,6 +52,8 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
     # via -r requirements.in
 drf-spectacular==0.24.2
+    # via -r requirements.in
+drf-spectacular-sidecar==2022.10.1
     # via -r requirements.in
 factory-boy==3.2.1
     # via pytest-factoryboy
